Git ignore vim swap files.
Signed-off-by: Sarah Sharp <sharp@otter.technology>

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 # Django sqlite database for local development experiments
 # The real server will use a different post gres database
 db.sqlite3
+*.swp
+*.swo
