--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dj-database-url==0.4.2
 dj-static==0.0.6
 Django==1.11.4
 django-modelcluster==3.1
+django-registration==2.2
 django-taggit==0.22.1
 django-treebeard==4.1.2
 djangorestframework==3.6.3
