--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ chardet==3.0.4
 dj-database-url==0.4.2
 dj-static==0.0.6
 Django==1.11.8
+django-contact-form==1.4.2
 django-modelcluster==3.1
 django-registration==2.2
 django-taggit==0.22.1
