--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ dj-database-url==0.4.2
 dj-static==0.0.6
 Django==1.11.8
 django-contact-form==1.4.2
+django-language-field==0.0.3
 django-modelcluster==3.1
 django-registration==2.2
 django-taggit==0.22.1
+django-timezone-field==2.0
 django-treebeard==4.2.0
 djangorestframework==3.6.4
 gunicorn==19.7.1
