--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-appconf==1.0.2
 django-compressor==2.2
 django-compressor-postcss==0.8.2
 django-contact-form==1.4.2
+django-extra-views==0.9.0
 django-language-field==0.0.3
 django-libsass==0.7
 django-modelcluster==3.1
