Add rich text field for project description

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,12 @@ dj-database-url==0.4.2
 dj-static==0.0.6
 Django==1.11.8
 django-appconf==1.0.2
+django-ckeditor==5.4.0
 django-compressor==2.2
 django-compressor-postcss==0.8.2
 django-contact-form==1.4.2
 django-extra-views==0.9.0
+django-js-asset==0.1.1
 django-language-field==0.0.3
 django-libsass==0.7
 django-modelcluster==3.1
