--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-language-field==0.0.3
 django-libsass==0.7
 django-modelcluster==3.1
 django-registration==2.2
+django-reversion==2.0.12
 django-taggit==0.22.1
 django-timezone-field==2.0
 django-treebeard==4.2.0
