--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,12 @@ django-ckeditor==5.4.0
 django-compressor==2.2
 django-compressor-postcss==0.8.2
 django-contact-form==1.4.2
+django-extra-views==0.9.0
 django-formtools==2.1
 django-js-asset==0.1.1
 django-language-field==0.0.3
 django-libsass==0.7
+django-markdownx==2.0.22
 django-modelcluster==3.1
 django-registration==2.2
 django-reversion==2.0.12
@@ -24,11 +26,11 @@ gunicorn==19.7.1
 html5lib==0.999999999
 idna==2.6
 libsass==0.13.4
+Markdown==2.6.11
 olefile==0.44
 Pillow==4.3.0
 psycopg2==2.7.3.2
 pytz==2017.3
-raven==6.5.0
 rcssmin==1.0.6
 requests==2.18.4
 rjsmin==1.0.12
