Make it easier to generate model instances for testing
I used `pipenv lock --keep-outdated` so we won't update anything that
we're already using.

--- a/Pipfile
+++ b/Pipfile
@@ -29,6 +29,7 @@ django-taggit = "==0.22.1"
 django-timezone-field = "==2.0"
 django-treebeard = "==4.2.0"
 djangorestframework = "==3.6.4"
+factory_boy = "*"
 gunicorn = "==19.7.1"
 "html5lib" = "==0.999999999"
 idna = "==2.6"
