--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,6 @@ cache: pip
 install: "make"
 script:
   - make test
+notifications:
+  webhooks:
+    - https://chat.outreachy.org/api/v1/external/travis?api_key=fOLPEfIUeqxjijWSSpnospk5gRp9Avny&stream=Outreachy%20website&ignore_pull_requests=false
