Add django-extensions for easier development
https://django-extensions.readthedocs.io/en/latest/

I specifically wanted it for:
  ./manage.py show_urls
but there are a bunch of other helpful tools, such as:
  ./manage.py shell_plus

See the documentation for the complete list.

--- a/Pipfile
+++ b/Pipfile
@@ -52,6 +52,7 @@ wagtail = "==1.13.1"
 webencodings = "==0.5.1"
 whitenoise = "==3.3.1"
 willow = "==1.0"
+django-extensions = "*"
 
 [dev-packages]
 
