--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
   - pip install pipenv --upgrade
   - pipenv install --dev
 script:
-  - PATH="$PWD/node_modules/.bin:$PATH" pipenv run python manage.py test home/
+  - PATH="$PWD/node_modules/.bin:$PATH" pipenv run python manage.py test -v3
 
 notifications:
   webhooks:
