Add flake8 config and some initial fixes

--- a/Pipfile
+++ b/Pipfile
@@ -57,6 +57,7 @@ django-extensions = "*"
 [dev-packages]
 coverage = "*"
 django-coverage-plugin = "*"
+"flake8" = "*"
 
 [requires]
 python_version = "3.6"
