Upgrade Django to latest 1.11 release

--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 dj-database-url = "==0.4.2"
 dj-static = "==0.0.6"
-django = "==1.11.8"
+django = "~=1.11"
 django-appconf = "==1.0.2"
 django-betterforms = "==1.1.4"
 django-ckeditor = "==5.4.0"
