--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "autoprefixer": "^7.2.4",
     "bootstrap": "^4.1.2",
     "clean-css-cli": "^4.1.10",
+    "d3-timeline-chart": "^1.3.0",
     "postcss-cli-simple": "^1.0.4"
   }
 }
