Update GitHub repo URLS to reflect new Outreachy GitHub organization
The website code was moved from

https://github.com/sagesharp/outreachy-django-wagtail/

to

https://github.com/outreachy/website/

The creative works and miscellaneous scripts were moved from

https://github.com/sagesharp/outreachy

to

https://github.com/outreachy/creative-works-and-scripts

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "www.outreachy.org",
   "version": "0.0.1",
-  "repository": "https://github.com/sagesharp/outreachy-django-wagtail",
+  "repository": "https://github.com/outreachy/website",
   "license": "GPL-3.0",
   "dependencies": {
     "autoprefixer": "^7.2.4",
