--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "license": "GPL-3.0",
   "dependencies": {
     "autoprefixer": "^9.8.6",
-    "bootstrap": "^4.5.2",
+    "bootstrap": "^4.6.0",
     "clean-css-cli": "^4.3.0",
     "d3-timeline-chart": "^1.3.0",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "postcss-cli-simple": "^3.1.0"
   }
 }
