Update dependencies - django pinned to 3.1.x, django-reversion pinned to 3.x
Summary
---

Update dependencies as much as we can. django-language-field has not
been updated to work with Django 3.2 (see details below).
django-reversion has a breaking change in 4.0.

django-language-field
---

We added field to represent the language interns and mentors speak. It
was a disaster, since loading the page with all the worlds' languages as
drop-down choices was very slow. So we later removed the field.

Now that field addition and deletion is in our migration history.
Whenever a new database is created (either locally or on a webserver),
Django goes through all migration files, and applies them one at a time.
That means when it gets to the old migration that adds the language
field, django-language-field needs to be installed or an error will get
thrown. Once the migration is done, the installed django-language-field
package is never used.

There is a way to "squash" migration history. It's a bit like
`git rebase -i`, where you can squash multiple commits into one commit.
Django takes the series of migrations that are being squashed, and
it creates one migration that represents the results of the database
operations those series of migrations does.

Once we "squash" the migration that adds the LanguageField field to the
database into the migration that removes that field from the database,
the result will be as if that field never existed at all. Basically that
migration would be recorded as a "noop" -- nothing in the database
changed.

Therefore, until we squash our migration history, the
django-language-field package will have to remain installed.

I got the following error below. Searching around for the error message
lead me to this stackoverflow post:

https://stackoverflow.com/questions/66981658/django-3-2-attributeerror-textfield-object-has-no-attribute-db-collation

Based on that post, it seems like django-language-field would need to be
patched to pass db_collate=N

--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 dj-database-url = "*"
 dj-static = "*"
-django = "*"
+django = "<3.2"
 django-ckeditor = "*"
 django-compressor = "*"
 django-compressor-postcss = "*"
@@ -17,7 +17,7 @@ django-formtools = "*"
 django-libsass = "*"
 django-markdownx = "*"
 django-registration = "*"
-django-reversion = "*"
+django-reversion = "<4.0"
 django-timezone-field = "*"
 gunicorn = "*"
 "psycopg2" = "*"
