--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
 	"scripts": {
 		"dokku": {
-			"predeploy": "python manage.py migrate --fake-initial"
+			"predeploy": "python manage.py migrate --noinput"
 		}
 	}
 }
