--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 dj-database-url = "*"
 dj-static = "*"
-django = "<3.2"
+django = "==3.2.16"
 django-ckeditor = "*"
 django-compressor = "*"
 django-compressor-postcss = "*"
@@ -21,6 +21,7 @@ django-reversion = "<4.0"
 django-timezone-field = "*"
 gunicorn = "*"
 "psycopg2" = "*"
+pytz = "==2021.1"
 raven = "*"
 wagtail = "*"
 whitenoise = "*"
@@ -31,10 +32,6 @@ django-betterforms = {git = "https://github.com/jpic/django-betterforms.git"}
 # Not used in the code outside the test suite, but useful in the Django shell
 # on the deployed site, so it's here instead of dev-packages.
 factory_boy = "*"
-
-# No longer used anywhere but still required until we squash away the
-# migrations that reference it.
-django-language-field = "*"
 
 [dev-packages]
 coverage = "*"
