--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "autoprefixer": "^9.8.6",
     "bootstrap": "^4.5.2",
     "clean-css-cli": "^4.3.0",
+    "d3": "^3.5.17",
+    "d3-histogram": "^1.3.0",
     "d3-timeline-chart": "^1.3.0",
     "postcss-cli-simple": "^3.1.0"
   }
