Pin node and npm version to Debian 11 (bullseye) versions
I need to slowly update the server, and the dokku deployment is failing when it tries to pull in the default npm heroku package (npm 10.2.3).

The error is:

       npm ERR! cb.apply is not a function

See full logs below.

For now, I'm fixing it by pinning our node and npm versions to Debian old stable, which is currently Debian 11 (bullseye). That's the version I'm running on my Debian laptop. (Note: I really need to upgrade to Debian stable -- Debian 12, bookworm, but that's not happening today.)

sage@macbeth:~/outreachy/outreachyhome$ git push --no-verify dokku-test d9f6543fcd92f0ee6e0db0b04545e0ff2be2e854:master
Enumerating objects: 7, done.
Counting objects: 100% (7/7), done.
Delta compression using up to 4 threads
Compressing objects: 100% (4/4), done.
Writing objects: 100% (4/4), 387 bytes | 387.00 KiB/s, done.
Total 4 (delta 3), reused 0 (delta 0), pack-reused 0
-----> Setting config vars
       GIT_REV:  d9f6543fcd92f0ee6e0db0b04545e0ff2be2e854
-----> Cleaning up...
-----> Building test from herokuish
-----> Adding BUILD_ENV to build environment...
       BUILD_ENV added successfully
-----> Warning: Multiple default buildpacks reported the ability to handle this app. The first buildpack in the list below will be used.
       Detected buildpacks: multi nodejs python
-----> Multipack app detected
=====> Downloading Buildpack: https://github.com/heroku/heroku-buildpack-nodejs#v202@v202
=====> Detected Framework: Node.js

-----> Creating runtime environment

       NPM_CONFIG_LOGLEVEL=error
       NODE_VERBOSE=false
       NODE_ENV=production
       NODE_MODULES_CACHE=true

-----> Installing binaries
       engines.node (package.json):  unspecified
       engines.npm (package.json):   unspecified (use default)

       Resolving node version 18.x...
       Downloading and installing node 18.19.0...
       Detected package-lock.json: defaulting npm to version 5.x.x
       Bootstrapping npm 5.x.x (replaci

--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "www.outreachy.org",
   "version": "0.0.1",
+  "engines": {
+	  "node": "12.x",
+	  "npm": "7.x"
+  },
   "repository": "https://github.com/outreachy/website",
   "license": "GPL-3.0",
   "dependencies": {
