Update django-formtools to 2.4.1
django-formtools committed a fix in version 2.4.1 for the regression causing our initial application form to not work.

Original bug:

https://github.com/jazzband/django-formtools/issues/220

Fix merged into 2.4.1:

https://github.com/jazzband/django-formtools/pull/239

--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,7 @@ django-compressor-postcss = "*"
 django-contact-form = "*"
 django-debug-toolbar = "*"
 django-extensions = "*"
-django-formtools = "==2.3"
+django-formtools = ">=2.4.1"
 django-libsass = "*"
 django-markdownx = "*"
 django-registration = "*"
