Update django-reversion Python package
I tested locally to see that the Sponsorship objects under revision
control would still be tracked properly.

I could see that when I made a change in the Django admin interface to
the Sponsorship object that the change was reflected in the revision
history.

I also tried reverting an object back to before the change. That worked
fine, and the object's history showed the change and the revert as two
revision control history points.

--- a/Pipfile
+++ b/Pipfile
@@ -17,7 +17,7 @@ django-formtools = ">=2.4.1"
 django-libsass = "*"
 django-markdownx = "*"
 django-registration = "*"
-django-reversion = "<4.0"
+django-reversion = "*"
 django-timezone-field = "*"
 gunicorn = "*"
 psycopg2 = "*"
