--- a/Pipfile
+++ b/Pipfile
@@ -23,7 +23,7 @@ gunicorn = "*"
 psycopg2 = "*"
 pytz = "*"
 raven = "*"
-wagtail = "==4.2.4"
+wagtail = "~=5.0"
 whitenoise = "*"
 factory_boy = "*"
 
