--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 dj-database-url = "*"
 dj-static = "*"
-django = "~=3.2"
+django = "~=4.2"
 django-ckeditor = "*"
 django-compressor = "*"
 django-compressor-postcss = "*"
@@ -26,11 +26,10 @@ raven = "*"
 wagtail = "~=5.0"
 whitenoise = "*"
 factory_boy = "*"
+setuptools = "*"
+django-betterforms = {git = "https://github.com/jpic/django-betterforms.git"}
 
 [dev-packages]
 coverage = "*"
 django-coverage-plugin = "*"
 flake8 = "*"
-
-[packages.django-betterforms]
-git = "https://github.com/jpic/django-betterforms.git"
